TZUP-461: Added CRUD functions for Source Of Fund
Removed files related to the Widget model
Renamed all the widget pieces to source of fund
